[workspace]
resolver = "2"
members = ["packages/rust/eddsa","packages/rust/poseidon2"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
num-bigint = "0.4"
num-traits = "0.2"
lazy_static = "1.4.0"
ark-ec = { version = "0.5"}
ark-ff = { version = "0.5" }
ark-ed-on-bls12-381 = { version = "0.5" }
ark-serialize = { version = "0.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
zeroize = "1"
blake3 = "1"
eyre = "0.6.12"
hex = "0.4.3"
